--- a/app/assets/stylesheets/_tariff-breadcrumbs.scss
+++ b/app/assets/stylesheets/_tariff-breadcrumbs.scss
@@ -24,6 +24,7 @@
         display: block;
         line-height: 25px;
         margin-top: 5px;
+        word-wrap: break-word;
         &::before, &::after {
           content: "";
           position: absolute;
